still trying stuff to fix spacing

--- a/src/signup.css
+++ b/src/signup.css
@@ -29,7 +29,7 @@
   transform: translateX(-0%);
   margin-top: 20px;
   position:absolute; 
-  top: 110px; 
+  top: 100px; 
   z-index: 1;
 }
 
@@ -43,7 +43,7 @@
   padding: 0;
   max-width: 70%;
   overflow:hidden;
-  transform: translateY(150%);
+  transform: translateY(100%);
   left: 0%;
   right: 0%;
   opacity: 0;
